Actions
Bug #10107
closedlibrpcsvc needs smatch fixes
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Updated by Electric Monk about 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 3df5395b5f23c9954f48ad824db4d3d3570e3d50
commit 3df5395b5f23c9954f48ad824db4d3d3570e3d50 Author: John Levon <john.levon@joyent.com> Date: 2019-03-27T03:48:17.000Z 10107 librpcsvc needs smatch fixes Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Gordon Ross <gwr@nexenta.com>
Actions